    - Gordon workers are no longer enabled
    - Gordon performance models are no longer enabled
  * Fix data transfer arrows in paje traces
  * The "heft" scheduler no longer exists. Users should now pick "dmda"
    instead.
  * StarPU can now use poti to generate paje traces.
  * Rename scheduling policy "parallel greedy" to "parallel eager"

Small changes:
  * STARPU_NCPU should now be used instead of STARPU_NCPUS. STARPU_NCPUS is
	still available for compatibility reasons.
  * include/starpu.h includes all include/starpu_*.h files, applications
	therefore only need to have #include <starpu.h>
  * Active task wait is now included in blocked time.
  * Fix GCC plugin linking issues starting with GCC 4.7.
  * Fix forcing calibration of never-calibrated archs.
  * CUDA applications are no longer compiled with the "-arch sm_13"
    option. It is specifically added to applications which need it.

StarPU 1.0.3 (svn revision 7379)
==============================================

Changes:
  * Several bug fixes in the build system
  * Bug fixes in source code for non-Linux systems
  * Fix generating FXT traces bigger than 64MiB.
  * Improve ENODEV error detections in StarPU FFT

StarPU 1.0.2 (svn revision xxx)
==============================================

Changes:
  * Add starpu_block_shadow_filter_func_vector and an example.
  * Add tag dependency in trace-generated DAG.
  * Fix CPU binding for optimized CPU-GPU transfers.
  * Fix parallel tasks CPU binding and combined worker generation.
  * Fix generating FXT traces bigger than 64MiB.

StarPU 1.0.1 (svn revision 6659)
==============================================

Changes:
  * hwloc support. Warn users when hwloc is not found on the system and
	produce error when not explicitely disabled.
  * Several bug fixes
  * GCC plug-in
	- Add `#pragma starpu release'
	- Fix bug when using `acquire' pragma with function parameters
	- Slightly improve test suite coverage
	- Relax the GCC version check